ArgoCD GitOps/NodeJS Backend 2 + MongoDB/deployments/backend-nodejs-backend-2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-nodejs-backend-2-ingress
  labels:
    name: backend-nodejs-backend-2-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: nodejs-backend-2.domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodejs-backend-2-svc
            port: 
              number: 80
